--- a/app/shirokepuJSONtool/test.html
+++ b/app/shirokepuJSONtool/test.html
@@ -17,6 +17,7 @@
 		<script src="https://cdn.rawgit.com/google/code-prettify/master/loader/run_prettify.js"></script>
 		<link href="https://utareyu.github.io/css/prettify.css" rel="stylesheet">
 		<script src="test.js"></script>
+		<script src="https://utareyu.github.io/previewImage.js" async></script>
 		<title>発言まとめJSON入力補助</title>
 	</head>
 	<style>
