--- a/app/shirokepuJSONtool/test.html
+++ b/app/shirokepuJSONtool/test.html
@@ -71,7 +71,7 @@
 					</div>
 					<span>画像:</span>
 					<div>
-						<input id="img" type="file" accept='image/*' onchange="previewImage(this);" value="."><input type="button" value="リセット" onclick="previewreset()">
+						<input id="img" type="file" accept='image/*' onchange="previewImage(this);" value="."><button onclick="previewReset()">リセット</button>
 						<span id="fsize" style="font-size: 14px;color: aliceblue;"></span>
 						<p>
 							<img id="preview" src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==">
