--- a/app/shirokepuJSONtool/test.html
+++ b/app/shirokepuJSONtool/test.html
@@ -87,6 +87,7 @@
 					<div>
 						<textarea id="result" rows="7" cols="40"></textarea><br>
 						<input id="copybtn" type="button" value="コピーして編集ページに移動" onclick="copynew()"><br><br>
+						<button class="add btn s" onclick="reset()" style="color: #e00;">全てリセット</button>
 					</div>
 					<code>入力例</code>
 					<pre class="prettyprint lang-json" style="margin:1em 0; width: 90%;">
@@ -123,6 +124,5 @@
 		<footer>
 			<p>(c)2021~ utareyu</p>
 		</footer>
-		<script>img.value=fsize.textContent=result.value="";</script>
 	</body>
 </html>
