--- a/app/shirocomJSONtool/index.html
+++ b/app/shirocomJSONtool/index.html
@@ -1,10 +1,3 @@
-<!--
- ■ ■ ■ ■ ■  ■ ■ ■ ■ ■     ■ ■ ■    ■ ■ ■ ■ ■ 
-     ■      ■           ■              ■
-     ■      ■ ■ ■ ■ ■     ■ ■ ■        ■
-     ■      ■                   ■      ■
-     ■      ■ ■ ■ ■ ■     ■ ■ ■        ■
--->
 <!DOCTYPE html>
 <html theme="Discord" lang="jp">
 
@@ -14,12 +7,11 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link href="https://utareyu.github.io/shirocom/Discord.css" rel="stylesheet">
 	<link href="https://utareyu.github.io/img/utareyu.ico" rel="icon">
-	<script src="test.js" async></script>
+	<script src="main.js" async></script>
 	<script src="https://utareyu.github.io/previewImage.js" async></script>
 	<title>会話まとめJSON入力補助</title>
 </head>
 <body id="body" onload="emo(action0)">
-	<p>TEST</p>
 	<header>
 		<h1>会話まとめJSON入力補助ツール</h1>
 	</header>
