--- a/app/shirocomJSONtool/index.html
+++ b/app/shirocomJSONtool/index.html
@@ -47,7 +47,7 @@
 							</select>
 						</div>
 						<div class="data">
-							<textarea class="add" required="required" placeholder="投稿内容" style="font-weight: 100;width:14em;"></textarea>
+							<textarea class="add" required="required" placeholder="投稿内容"></textarea>
 						</div>
 						<div class="container act">
 							<button id="action0" name="action0" class="add btn s" onclick="addAct(this);emo(this);">+</button>
