--- a/app/app.html
+++ b/app/app.html
@@ -21,9 +21,7 @@
 		<ul>
 			<li><a href="https://utareyu.github.io/JavaScript/day02/number-guessing-game.html">数当てゲーム</a></li>
 			<li><a href="https://utareyu.github.io/app/shirokepuJSONtool">発言まとめJSON入力補助ツール</a></li>
-			<!-- 椅子年齢 -->
-			<!-- BMMatch -->
-			<!-- パレート図 -->
+			<li><a href="https://utareyu.github.io/app/shirocomJSONtool">会話まとめJSON入力補助ツール</a></li>
 
 		</ul>
 	</main>
