--- a/app/shirocomJSONtool/test.html
+++ b/app/shirocomJSONtool/test.html
@@ -79,7 +79,7 @@
 						</div>
 						<div>
 							<br>
-							<button class="add btn s" onclick="reset()" style="color: #e00;">全てリセット</button>
+							<button class="add btn s" onclick="resetq(this)" style="color: #e00;">全てリセット</button>
 						</div>
 					</div>
 				</div>
