--- a/app/shirocomJSONtool/test.html
+++ b/app/shirocomJSONtool/test.html
@@ -58,7 +58,7 @@
 							<textarea class="add" required="required" placeholder="投稿内容"></textarea>
 						</div>
 						<div class="container act">
-							<button id="action0" name="action0" class="add btn s" onclick="addAct(this);emo(this);">+</button>
+							<button id="action0" name="action0" class="add btn s" onclick="addAct(this);emo(this);">😀 +</button>
 						</div>
 					</div>
 				</div>
@@ -67,7 +67,7 @@
 				<p id="runp" style="color: #e00;"></p>
 
 				<br>
-				<div id="" class="container post">
+				<div class="container post">
 					<div class="container ico"><img class="ico" src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw=="></div>
 					<div class="container content">
 						<div class="member">結果</div>
@@ -75,7 +75,7 @@
 							<textarea id="rst" class="add"></textarea>
 						</div>
 						<div class="container act">
-							<button id="action0" name="action0" class="add btn s" onclick="copyNew(this)">コピーして編集ページに移動</button>
+							<button id="" name="action0" class="add btn s" onclick="copyNew(this)">コピーして編集ページに移動</button>
 						</div>
 						<div>
 							<br>
